Module 2 Week 2 | Homework assignment - overloading 01

--- a/CppLondonUniversity/CppLondonUniversity.vcxproj.filters
+++ b/CppLondonUniversity/CppLondonUniversity.vcxproj.filters
@@ -18,12 +18,12 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Point.cpp">
+    <ClCompile Include="conversion.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Point.h">
+    <ClInclude Include="conversion.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
